# PRO2-Practica2-22-23

./: CMakeLists.txt  README.md  config.cmake  jury_list.c  jury_list.h  main.c  participant_list.c  participant_list.h  script.sh  test_jury_list.c  test_participant_list.c  types.h
